fixxed whats app invalid no. issue, remove extra margin on all pages, showed description in service details.

--- a/css/style.css
+++ b/css/style.css
@@ -201,12 +201,12 @@ iframe {
 }
 .gp {
     float: left;
-    padding: 115px 0;
+    padding-top: 59px;
     position: relative;
     width: 100%;
 }
 .gp.padd90-100 {padding: 90px 0 100px;}
-.gp.ls-gp {padding: 80px 0;}
+.gp.ls-gp {padding-top: 10px 0;}
 .gp.ls-gp2 {padding: 60px 0;}
 .gp.ls-gp3 {padding: 45px 0;}
 .gp.tp-xt80 {padding-top: 80px;}
